--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-NEXT_PUBLIC_EMAIL_SERVICE_KEY=service_aeakwcd
-NEXT_PUBLIC_EMAIL_TEMPLATE_ID=template_rpedc0v
-NEXT_PUBLIC_EMAIL_PUBLIC_KEY=KpR5CENj5s_qfGFSc
+NEXT_PUBLIC_EMAIL_SERVICE_KEY=service_r8yicay
+NEXT_PUBLIC_EMAIL_TEMPLATE_ID=template_536vm0j
+NEXT_PUBLIC_EMAIL_PUBLIC_KEY=u4gzBOkktbsu47KVa
 
 
-NEXT_PUBLIC_API_BASE_URL=https://admin.carrepairsservices.com
-NEXT_PUBLIC_URL=https://carrepairsservices.com
+NEXT_PUBLIC_API_BASE_URL=https://admin.24carfixdubai.com
+NEXT_PUBLIC_URL=https://24carfixdubai.com
