--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@smastrom/react-rating": "^1.5.0",
     "antd": "^5.26.7",
     "gsap": "^3.13.0",
+    "html-react-parser": "^5.2.17",
     "mongodb": "^6.19.0",
     "next": "15.4.8",
     "nodemailer": "^7.0.5",
